change root bg-color

--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,5 +1,5 @@
 .root {
-  background-color: #2A2C2F;
+  background-color: #000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
