--- a/pages/index.css
+++ b/pages/index.css
@@ -11,8 +11,7 @@
   height: 74px;
   max-width: 880px;
   margin: 45px auto 0;
-  border-bottom: 1px solid #545454;
-  opacity: 0.7;
+  border-bottom: 1px solid #54545470;
 }
 
 @media (max-width: 880px) {
@@ -26,5 +25,130 @@
     margin-top: 28px;
   }
 }
-.header {}
-.header {}
+
+.profile {
+  max-width: 880px;
+  /* width: calc(100% - 400px); */
+  margin: 40px auto 51px; /* 15.625% */
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+  /* padding: 0 200px 0; */
+}
+
+@media (max-width: 880px) {
+  .profile {
+    padding-left: 27px;
+    padding-right: 27px;
+
+  }
+}
+
+.profile__avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+}
+.profile__user-info {
+  display: grid;
+  grid-template-columns: max-content min-content;
+  /* Todo first column maybe minmax for long content to wrap */
+  grid-template-rows: min-content min-content;
+  align-items: baseline;
+  row-gap: 16px;
+  column-gap: 18px;
+  margin-left: 30px;
+}
+.profile__user-name {
+  color: #fff;
+  margin: 0;
+}
+.profile__edit-btn {
+  width: 24px;
+  height: 24px;
+  border: 2px solid #fff;
+  border-radius: 2px;
+  background-color: #000;
+  background-image: url(../images/pencil_type_active.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.profile__user-profession {
+  color: #fff;
+  margin: 0;
+  grid-column: 1 / span 2;
+}
+.profile__btn {
+  width: 150px;
+  height: 50px;
+  border: 2px solid #fff;
+  border-radius: 2px;
+  background-color: #000;
+  margin-left: auto;
+  background-image: url(../images/plus_type_active.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+
+}
+.cards {
+  max-width: 880px;
+  margin: 0 auto;
+}
+.cards__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+
+  column-gap: 17px;
+  row-gap: 20px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.cards__item {
+  background-color: #FFF;
+  border-radius: 10px;
+  width: 282px;
+  height: 361px;
+  overflow: hidden;
+}
+.cards__image {
+  width: 100%;
+  height: 282px;
+  object-fit: cover;
+  object-position: center;
+}
+ .cards_description {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 25px 30px 31px 21px;
+ }
+.cards__title {
+  margin: 0;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+}
+.cards__like {
+  background-image: url(../images/heart_type_disabled.svg);
+  width: 22px;
+  height: 19px;
+  color: #fff;
+}
+.footer {
+  max-width: 880px;
+  margin: 67px auto 60px 200px;
+  /* padding: 67px 200px 60px 200px; */
+
+  /* padding-left: 200px; */
+  /* padding-right: 200px; */
+}
+.footer__copyright {
+  margin: 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #545454;
+}
