--- a/pages/index.css
+++ b/pages/index.css
@@ -230,3 +230,117 @@
     padding-left: 19px;
   }
 }
+
+.popup {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: none;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  min-height: 330px;
+  max-width: 430px;
+  padding: 34px 36px 37px 36px;
+  box-sizing: border-box;
+}
+.popup_close-btn {
+  width: 32px;
+  height: 32px;
+  background-image: url(../images/close-icon_type_active.svg);
+  background-color: transparent;
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  border: none;
+  box-sizing: border-box;
+}
+.popup_close-btn:hover {
+  opacity: 0.6;
+}
+
+.popup__title {
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  margin: 0;
+}
+
+.popup__form {
+  display: flex;
+  flex-direction: column;
+
+}
+.popup__name {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  border: none;
+  border-bottom: 1px solid #00000020;
+  margin-top: 54px;
+  box-sizing: border-box;
+  height: 27px;
+  padding-bottom: 13px;
+  outline: none;
+}
+
+.popup__occupation {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  margin-top: 30px;
+  border: none;
+  border-bottom: 1px solid #00000020;
+  box-sizing: border-box;
+  height: 27px;
+  padding-bottom: 13px;
+  outline: none;
+}
+.popup__submit-btn {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #000;
+  border-radius: 2px;
+  max-width: 358px;
+  height: 50px;
+  margin-top: 48px;
+}
+
+.popup__submit-btn:hover {
+  opacity: 0.8;
+}
+
+@media (max-width: 580px) {
+  .popup {
+    border-radius: 10px;
+    height: 322px;
+    min-width: 282px;
+    padding: 25px 22px;
+  }
+  .popup_close-btn {
+    width: 20px;
+    height: 20px;
+    top: -36px;
+    right: 0;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .popup__name {
+    margin-top: 75px;
+  }
+  .popup__occupation {
+  }
+  .popup__submit-btn {
+    margin-top: 45px;
+  }
+}
