--- a/pages/index.css
+++ b/pages/index.css
@@ -78,7 +78,7 @@
   background-repeat: no-repeat;
   background-position: center;
   transition: opacity 100ms;
-  transition: opacity 100ms;
+  cursor: pointer;
 }
 
 .profile__edit-btn:hover {
@@ -104,6 +104,7 @@
   background-repeat: no-repeat;
   background-position: center;
   transition: opacity 100ms;
+  cursor: pointer;
 }
 
 .profile__btn:hover {
@@ -233,6 +234,7 @@
 
 .popup {
   display: block;
+  margin: 0;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -255,6 +257,8 @@
   right: -40px;
   border: none;
   box-sizing: border-box;
+  cursor: pointer;
+  transition: opacity 100ms;
 }
 .popup_close-btn:hover {
   opacity: 0.6;
@@ -309,6 +313,8 @@
   max-width: 358px;
   height: 50px;
   margin-top: 48px;
+  cursor: pointer;
+  transition: opacity 100ms;
 }
 
 .popup__submit-btn:hover {
