Reorganize css to bem methodology

--- a/pages/index.css
+++ b/pages/index.css
@@ -7,364 +7,38 @@
 @import url(../blocks/page/page.css);
 
 /* Header */
-.header {
-  height: 74px;
-  max-width: 880px;
-  margin: 45px auto 0;
-  border-bottom: 1px solid #54545470;
-}
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 
-@media (max-width: 880px) {
-  .header {
-    padding-left: 27px;
-    height: 56px;
-    margin-top: 28px;
-  }
-  .header__logo {
-    width: 104px;
-    height: 25px;
-  }
-}
+/* Profile */
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__user-info/profile__user-info.css);
+@import url(../blocks/profile/__user-name/profile__user-name.css);
+@import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
+@import url(../blocks/profile/__user-occupation/profile__user-occupation.css);
+@import url(../blocks/profile/__btn/profile__btn.css);
 
-@media (max-width: 580px) {
-  .header {
-    margin-top: 28px;
-  }
-}
+/* Cards */
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__list/cards__list.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__like/cards__like.css);
 
-.profile {
-  max-width: 880px;
-  margin: 40px auto 51px;
-  display: flex;
-  align-items: center;
-}
+/* Footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
-@media (max-width: 880px) {
-  .profile {
-    padding-left: 27px;
-    padding-right: 27px;
-  }
-}
-
-.profile__avatar {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-}
-.profile__user-info {
-  display: grid;
-  grid-template-columns: minmax(189px, max-content) min-content;
-  grid-template-rows: min-content min-content;
-  align-items: baseline;
-  row-gap: 16px;
-  column-gap: 18px;
-  margin-left: 30px;
-}
-.profile__user-name {
-  color: #fff;
-  margin: 0;
-  font-weight: 500;
-  font-size: 42px;
-  line-height: 48px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.profile__edit-btn {
-  width: 24px;
-  height: 24px;
-  border: 1px solid #fff;
-  background-color: #000;
-  background-image: url(../images/pencil_type_active.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: opacity 100ms;
-  cursor: pointer;
-}
-
-.profile__edit-btn:hover {
-  opacity: 0.6;
-}
-
-.profile__user-occupation {
-  color: #fff;
-  margin: 0;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  grid-column: 1 / span 2;
-}
-.profile__btn {
-  width: 150px;
-  height: 50px;
-  border: 2px solid #fff;
-  border-radius: 2px;
-  background-color: #000;
-  margin-left: auto;
-  background-image: url(../images/plus_type_active.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: opacity 100ms;
-  cursor: pointer;
-}
-
-.profile__btn:hover {
-  opacity: 0.6;
-}
-
-@media (max-width: 700px) {
-  .profile {
-    margin: 0 auto;
-    padding: 42px 19px 36px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .profile__user-info {
-    margin: 0 auto;
-    margin-top: 26px;
-    row-gap: 5px;
-    column-gap: 10px;
-    align-items: center;
-    justify-items: center;
-  }
-  .profile__user-name {
-    font-size: 27px;
-  line-height: 33px;
-  }
-  .profile__edit-btn {
-    width: 18px;
-    height: 18px;
-    background-size: 7.5px 7.5px;
-  }
-  .profile__user-occupation {
-    text-align: center;
-    font-size: 14px;
-    line-height: 17px;
-  }
-
-  .profile__btn {
-    width: 282px;
-    margin: 0 auto;
-    margin-top: 36px;
-    background-size: 16px 16px;
-  }
-}
-
-.cards {
-  max-width: 880px;
-  margin: 0 auto;
-}
-.cards__list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 282px);
-  column-gap: 17px;
-  row-gap: 20px;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.cards__item {
-  background-color: #FFF;
-  border-radius: 10px;
-  width: 282px;
-  height: 361px;
-  overflow: hidden;
-}
-.cards__image {
-  width: 100%;
-  height: 282px;
-  object-fit: cover;
-  object-position: center;
-}
- .cards_description {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-  padding: 25px 30px 31px 21px;
- }
-.cards__title {
-  margin: 0;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
-}
-.cards__like {
-  background-image: url(../images/heart_type_disabled.svg);
-  width: 22px;
-  height: 19px;
-  color: #fff;
-  transition: opacity 100ms;
-  cursor: pointer;
-}
-
-.cards__like:hover {
-  opacity: 0.5;
-}
-
-@media (max-width: 580px) {
-  .cards {
-    padding-right: 19px;
-    padding-left: 19px;
-  }
-}
-
-.footer {
-  max-width: 880px;
-  margin: 67px auto 60px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 282px);
-  column-gap: 17px;
-  justify-content: center;
-}
-.footer__copyright {
-  margin: 0;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  color: #545454;
-}
-
-@media (max-width: 580px) {
-  .footer {
-    margin: 48px auto 36px;
-    padding-left: 19px;
-  }
-}
-
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 200ms,
-              opacity 200ms;
-}
-
-.popup_active {
-  visibility: visible;
-  opacity: 1;
-}
-.popup__window {
-  margin: 0;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: none;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
-  min-height: 330px;
-  max-width: 430px;
-  padding: 34px 36px 37px 36px;
-  box-sizing: border-box;
-  background-color: #fff;
-}
-
-.popup_close-btn {
-  width: 32px;
-  height: 32px;
-  background-image: url(../images/close-icon_type_active.svg);
-  background-color: transparent;
-  position: absolute;
-  top: -40px;
-  right: -40px;
-  border: none;
-  box-sizing: border-box;
-  cursor: pointer;
-  transition: opacity 100ms;
-}
-.popup_close-btn:hover {
-  opacity: 0.6;
-}
-
-.popup__title {
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
-  text-align: center;
-  margin: 0;
-}
-
-.popup__form {
-  display: flex;
-  flex-direction: column;
-
-}
-.popup__name {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  border: none;
-  border-bottom: 1px solid #00000020;
-  margin-top: 54px;
-  box-sizing: border-box;
-  height: 27px;
-  padding-bottom: 13px;
-  outline: none;
-}
-
-.popup__occupation {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  margin-top: 30px;
-  border: none;
-  border-bottom: 1px solid #00000020;
-  box-sizing: border-box;
-  height: 27px;
-  padding-bottom: 13px;
-  outline: none;
-}
-.popup__submit-btn {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  color: #FFFFFF;
-  background-color: #000;
-  border-radius: 2px;
-  max-width: 358px;
-  height: 50px;
-  margin-top: 48px;
-  cursor: pointer;
-  transition: opacity 100ms;
-}
-
-.popup__submit-btn:hover {
-  opacity: 0.8;
-}
-
-@media (max-width: 580px) {
-  .popup__window {
-    border-radius: 10px;
-    height: 322px;
-    min-width: 282px;
-    padding: 25px 22px;
-  }
-  .popup_close-btn {
-    width: 20px;
-    height: 20px;
-    top: -36px;
-    right: 0;
-    background-position: center;
-    background-size: cover;
-  }
-
-  .popup__title {
-    font-size: 18px;
-    line-height: 22px;
-  }
-  .popup__name {
-    margin-top: 75px;
-  }
-
-  .popup__submit-btn {
-    margin-top: 45px;
-  }
-}
+/* Pop-up */
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_active/popup_active.css);
+@import url(../blocks/popup/__window/popup__window.css);
+@import url(../blocks/popup/__close-btn/popup__close-btn.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__name/popup__name.css);
+@import url(../blocks/popup/__occupation/popup__occupation.css);
+@import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
