fix: add default fonts, change popup positioning, button type button

--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -18,7 +18,7 @@
 
 @media (max-width: 580px) {
 
-  .popup_close-btn {
+  .popup__close-btn {
     width: 20px;
     height: 20px;
     top: -36px;
