--- a/blocks/popup/__window/popup__window.css
+++ b/blocks/popup/__window/popup__window.css
@@ -1,9 +1,6 @@
 .popup__window {
   margin: 0;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
   border: none;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -18,7 +15,7 @@
 @media (max-width: 580px) {
   .popup__window {
     border-radius: 10px;
-    height: 322px;
+    min-height: 322px;
     min-width: 282px;
     padding: 25px 22px;
   }
