--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,6 @@
 .page {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
   color:#000;
   max-width: 1280px;
   margin: 0 auto;
-  /* position: relative; */
 }
