--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,3 +6,11 @@
   line-height: 22px;
   color: #545454;
 }
+
+@media (max-width: 580px) {
+
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
