--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,11 +5,11 @@
   bottom: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  visibility: hidden;
-  opacity: 0;
   transition: visibility 200ms,
               opacity 200ms;
-  display: flex;
+  display: none;
+  visibility: visible;
+  opacity: 1;
   justify-content: center;
   align-items: center;
 }
