--- a/blocks/profile/__user-name/profile__user-name.css
+++ b/blocks/profile/__user-name/profile__user-name.css
@@ -7,12 +7,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 294px;
 }
 
 @media (max-width: 700px) {
 
   .profile__user-name {
     font-size: 27px;
-  line-height: 33px;
+    line-height: 33px;
+    max-width: 189px;
   }
 }
