--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,20 +1,14 @@
 .header {
-  height: 74px;
+  padding-bottom: 41px;
   max-width: 880px;
   margin: 45px auto 0;
-  border-bottom: 1px solid #54545470;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media (max-width: 880px) {
   .header {
     padding-left: 27px;
-    height: 56px;
-    margin-top: 28px;
-  }
-}
-
-@media (max-width: 580px) {
-  .header {
+    padding-bottom: 31.6px;
     margin-top: 28px;
   }
 }
