--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -1,19 +1,3 @@
-.popup__name {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  border: none;
-  border-bottom: 1px solid #00000020;
+/* .popup__name {
   margin-top: 48px;
-  box-sizing: border-box;
-  height: 27px;
-  padding-bottom: 13px;
-  outline: none;
-}
-
-@media (max-width: 580px) {
-
-  .popup__name {
-    margin-top: 75px;
-  }
-}
+} */
