--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -5,6 +5,7 @@
   text-align: center;
   color: #FFFFFF;
   background-color: #000;
+  border-color: #000;
   border-radius: 2px;
   max-width: 358px;
   height: 50px;
@@ -22,5 +23,7 @@
   .popup__submit-btn {
     margin-top: 45px;
     height: 46px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
