--- a/blocks/popup/__window/popup__window.css
+++ b/blocks/popup/__window/popup__window.css
@@ -4,7 +4,7 @@
   border: none;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  min-height: 330px;
+  /* min-height: 330px; */
   max-width: 430px;
   padding: 34px 36px 37px 36px;
   box-sizing: border-box;
@@ -15,7 +15,7 @@
 @media (max-width: 580px) {
   .popup__window {
     border-radius: 10px;
-    min-height: 322px;
+    /* min-height: 322px; */
     min-width: 282px;
     padding: 25px 22px;
   }
