--- a/blocks/profile/__user-occupation/profile__user-occupation.css
+++ b/blocks/profile/__user-occupation/profile__user-occupation.css
@@ -4,10 +4,11 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  grid-column: 1 / span 2;
+  /* grid-column: 1 / span 2; */
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 336px;
 }
 
 @media (max-width: 700px) {
@@ -16,5 +17,6 @@
     text-align: center;
     font-size: 14px;
     line-height: 17px;
+    max-width: 220px;
   }
 }
