fix: 3rd review fix

--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -3,7 +3,7 @@
   font-size: 14px;
   line-height: 17px;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   height: 27px;
   padding-bottom: 13px;
