feat: add trash button on card and its styles

--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,7 +1,8 @@
 .cards__item {
-  background-color: #FFF;
+  background-color: #fff;
   border-radius: 10px;
   width: 282px;
   height: 361px;
   overflow: hidden;
+  position: relative;
 }
