--- a/pages/index.css
+++ b/pages/index.css
@@ -27,6 +27,7 @@
 @import url(../blocks/cards/__description/cards__description.css);
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__trash/cards__trash.css);
 
 /* Footer */
 @import url(../blocks/footer/footer.css);
