--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,12 +4,11 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: visibility 200ms,
-              opacity 200ms;
-  display: none;
-  visibility: visible;
-  opacity: 1;
+  display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: visibility 200ms, opacity 300ms;
+  visibility: hidden;
+  opacity: 0;
 }
