--- a/blocks/profile/__btn-add-img/profile__btn-add-img.css
+++ b/blocks/profile/__btn-add-img/profile__btn-add-img.css
@@ -1,4 +1,4 @@
-.profile__btn {
+.profile__btn-add-img {
   width: 150px;
   height: 50px;
   border: 2px solid #fff;
@@ -13,13 +13,12 @@
   padding: 0;
 }
 
-.profile__btn:hover {
+.profile__btn-add-img:hover {
   opacity: 0.6;
 }
 
 @media (max-width: 700px) {
-
-  .profile__btn {
+  .profile__btn-add-img {
     width: 282px;
     margin: 0 auto;
     margin-top: 36px;
