--- a/pages/index.css
+++ b/pages/index.css
@@ -17,7 +17,7 @@
 @import url(../blocks/profile/__user-name/profile__user-name.css);
 @import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
 @import url(../blocks/profile/__user-occupation/profile__user-occupation.css);
-@import url(../blocks/profile/__btn/profile__btn.css);
+@import url(../blocks/profile/__btn-add-img/profile__btn-add-img.css);
 
 /* Cards */
 @import url(../blocks/cards/cards.css);
@@ -27,6 +27,7 @@
 @import url(../blocks/cards/__description/cards__description.css);
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__like/_active/cards__like_active.css);
 @import url(../blocks/cards/__trash/cards__trash.css);
 
 /* Footer */
@@ -42,3 +43,8 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
+
+/* Image Pop-up */
+@import url(../blocks/popup/_type/popup_type_open-image.css);
+@import url(../blocks/popup/__image-figure/popup__image-figure.css);
+@import url(../blocks/popup/__image-title/popup__image-title.css);
