feat: image preview popup

--- a/pages/index.css
+++ b/pages/index.css
@@ -47,4 +47,5 @@
 /* Image Pop-up */
 @import url(../blocks/popup/_type/popup_type_open-image.css);
 @import url(../blocks/popup/__image-figure/popup__image-figure.css);
+@import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-title/popup__image-title.css);
