feat: add form error msg

--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -14,13 +14,20 @@
   margin-top: 48px;
 }
 
-.popup__input:nth-child(2) {
+/* .popup__input:nth-child(3) {
   margin-top: 30px;
-}
+} */
 
 @media (max-width: 580px) {
-
   .popup__input:first-child {
     margin-top: 75px;
   }
+}
+
+.popup__input::placeholder {
+  color: #c4c4c4;
+}
+
+.popup__input_type_error {
+  border-bottom-color: #ff0000;
 }
