--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -3,13 +3,14 @@
   font-size: 18px;
   line-height: 22px;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #000;
   border-color: #000;
   border-radius: 2px;
   max-width: 358px;
   height: 50px;
-  margin-top: 48px;
+  margin-top: 18px;
+  padding: 0;
   cursor: pointer;
   transition: opacity 100ms;
 }
@@ -19,9 +20,8 @@
 }
 
 @media (max-width: 580px) {
-
   .popup__submit-btn {
-    margin-top: 45px;
+    margin-top: 15px;
     height: 46px;
     font-size: 14px;
     line-height: 17px;
