--- a/pages/index.css
+++ b/pages/index.css
@@ -59,6 +59,22 @@
   display: block;
   height: 30px;
   padding-top: 5px;
+  opacity: 0;
 }
 .popup__input-error-msg_active {
+  opacity: 1;
+}
+
+.popup__input_type_error {
+  border-bottom-color: #ff0000;
+}
+
+.popup__submit-btn_inactive {
+  color: rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  border-color: rgba(0, 0, 0, 0.15);
+}
+
+.popup__submit-btn_inactive:hover {
+  opacity: 1;
 }
