feat: add like counter markup

--- a/src/blocks/cards/__description/cards__description.css
+++ b/src/blocks/cards/__description/cards__description.css
@@ -1,6 +1,6 @@
 .cards__description {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
-  padding: 23px 20px 27px 21px;
- }
+  padding: 22px 20px 27px 21px;
+}
