--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -28,6 +28,7 @@
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like/cards__like.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
+@import url(../blocks/cards/__counter/cards__counter.css);
 @import url(../blocks/cards/__trash/cards__trash.css);
 
 /* Footer */
