--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,4 +2,9 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  transition: opacity 300ms linear;
+}
+
+.profile__avatar:hover {
+  opacity: 0.2;
 }
