--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -1,4 +1,6 @@
 .popup__title {
+  font-family: "Inter";
+  font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
@@ -6,7 +8,6 @@
 }
 
 @media (max-width: 630px) {
-
   .popup__title {
     font-size: 18px;
     line-height: 22px;
